change in background

--- a/src/components/BurgerBuilder/BurgerBuilder.css
+++ b/src/components/BurgerBuilder/BurgerBuilder.css
@@ -110,7 +110,7 @@ button.MuiButtonBase-root.MuiButton-root.MuiButton-text.submit_order {
 }
 
 body {
-  background-color: #588da8;
+  background-color: black;
   background-image: url("https://res.cloudinary.com/spread-the-love/image/upload/v1588793980/jon-tyson-qAZO-wu3tik-unsplash_fe9u9m.jpg");
   background-size: cover;
 }
