--- a/src/components/BurgerBuilder/BurgerBuilder.css
+++ b/src/components/BurgerBuilder/BurgerBuilder.css
@@ -119,8 +119,6 @@ body {
   box-shadow: 1px 1px 1px black;
   border: 3px solid white;
   background-color: black;
-  width: 500px;
-  height: 345px;
 }
 .swal-title {
   color: white;
@@ -129,5 +127,12 @@ body {
 
 .swal-text {
   color: white;
-  letter-spacing: 1px;
+  letter-spacing: 5px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
+}
+
+button.swal-button.swal-button--confirm {
+  background-color: white;
+  color: black;
 }
